--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Resetting some default browser styles */
+html,
+body,
+app-root {
+  margin: 0;
+  padding: 0;
+}
+
+/* Making sure the html and body elements are full height */
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
+/* Ensuring Angular's root element expands to fill available space */
+app-root {
+  background: #018281;
+  display: block;
+  height: 100%;
+  width: 100%;
+}
